# AI-nimator

./: .gitignore  AGENT.md  README.md  pyproject.toml
.run/: CLIP training.run.xml  Generation training.run.xml  Motion Generation.run.xml  convert file to collada.run.xml  prepare dataset.run.xml
doc/: architecture.md
doc/source/: animation_export_cli.rst  annexe.rst  cli.rst  conf.py  index.rst  inference.rst  lmf_extractor.rst  overview.rst  prompt2anim.rst  startup.rst  training.rst  uniformizer.rst
src/: __init__.py
src/cli/: animation_export_cli.py  build_dataset.py  generate_animation.py  generate_motion.py  json_to_collada.py  lmf_extractor_cli.py  preprocess_dataset.py  prompt_to_anim_cli.py  rag_openai_cli.py  test_animation_export_cli.py  tools.py  train_clip.py  train_generation.py  uniformizer_cli.py
src/configs/: dataset.yaml  network.yaml  preprocess_dataset.yaml  train_clip.yaml  train_generation.yaml  train_generation_overfit.yaml
src/features/clip/: config_loader.py  train_clip.py
src/features/dataset_builder/: animation_rebuilder.py  config_loader.py  converted_prompt_repository.py  custom_prompt_repository.py  (+8 more)
src/shared/: __init__.py  animation_exporter.py  animation_io.py  config_loader.py  dataset_manager.py  device.py  learning_rate.py  logging_utils.py  naming.py  preprocessed_dataset.py  progress.py  quaternion.py  rag_utils.py  skeleton.py  temporal_diffusion.py  test_animation_exporter.py  test_animation_io.py  test_device.py  test_naming.py  test_quaternion.py  test_skeleton.py  test_temporal_diffusion.py  test_text.py  text.py
(+55 files in other folders)
