[build-system]
requires = ["setuptools>=66", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AI-nimator"
version = "0.0.1"
description = "Prompt-to-animation diffusion toolkit with shared training and inference pipelines."
readme = "AGENT.md"
requires-python = ">=3.12,<3.14"
authors = [{ name = "pazimor" }]
dependencies = [
  "numpy>=1.25",
  "torch>=2.1",
  "tqdm>=4.66",
  "transformers>=4.35",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4",
  "pytest-cov>=7",
  "coverage[toml]>=7.4",
]
docs = [
  "sphinx>=7.2",
  "alabaster>=0.7",
]

[tool.poetry]
package-mode = false
# name = "AI-nimator"
# version = "0.0.1"
# packages = [{ include = "ai_nimator", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[tool.ruff]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
strict = true
pretty = true

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = [".", "src"]

[tool.coverage.run]
source = ["src/shared"]
branch = true
omit = ["*/__init__.py", "*/test_*.py", "*/doc/*.py", "*/src/cli/*.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
